# cpp_14x050

./: .gitignore  README.md
source/: CMakeLists.txt  exercise_1_1.cpp  exercise_1_2_nvpl.cpp  exercise_1_3_accelerate.cpp  exercise_1_3_nvpl.cpp  exercise_2.cpp  exercise_3.cpp  exercise_4.cpp  exercise_4_basic.cpp  exercise_5.cpp
source/dataset/: get_mnist.sh
src/: exercise1_3.cpp  exercise_1_2.cpp
